# cwd

./: .gitignore  README.md  hhh.py  pyproject.toml  requirements.txt  setup_chromadb.py  test_youtube_api.py  youtube_channel_id_extractor.py  youtube_channel_ids_20250606_090832.txt
chroma_db/: chroma.sqlite3
config/: __init__.py  paths.py
config/youtube/: youtube_config.yaml
outputs/youtube/2025-06-05/processed/: L1dCrv9vgyE.json  Tfx9IbB601I.json  UyGLRM52LJ0.json  VBgpwCfJID8.json  VnkWluCbskw.json  euRXjKCEEYo.json  gQbPewimOSk.json  kX2Cw-_x5XI.json  pWYvmlWdweM.json
outputs/youtube/2025-06-05/stats/: statistics.json
outputs/youtube/2025-06-05/transcripts/: L1dCrv9vgyE.json  Tfx9IbB601I.json  UyGLRM52LJ0.json  VBgpwCfJID8.json  VnkWluCbskw.json  euRXjKCEEYo.json  gQbPewimOSk.json  kX2Cw-_x5XI.json  pWYvmlWdweM.json
outputs/youtube/2025-06-06/processed/: -Av-oNp2PNQ.json  -HRRV7rm1hA.json  0wX5NEMNIjA.json  21H0JXKv7Do.json  2Ln97WQiuBk.json  2pa0trbk_no.json  3Iydw7P00hY.json  4Ho1OEb3D2A.json  4YAcbceE1E8.json  61YOAr9e6UY.json  6UHTZXh-qaE.json  7zDPuNbzKnw.json  83MHkgHG064.json  8BY15oOM-Ys.json  Ay7JbVzofU0.json  BJOkyA76rKU.json  BRiOpbB3cS0.json  BkRlzRNmheE.json  Bnw2fjyCVjQ.json  CItODIxWTaY.json  CLYxQ3DUzWs.json  FElInCUy-LM.json  GLIRHuJicks.json  G_Dfxo2S-ak.json  HHoH2RnFqi4.json  HlzTusV1oDo.json  I0jnyaVduPc.json  K5oAG64KuNQ.json  M-vKzlQJGxc.json  Mtr7a7fkSS8.json  MvoJ1WRN8uo.json  NsMO7sID0ys.json  P9qpuKIEeus.json  QeLIctJk1Po.json  RJ31FlIEk-E.json  RiDEIhZErgU.json  Rn9nVmE_IhI.json  SjSDWIa4SHk.json  UGdjMwGEvKQ.json  Vo8R_LubnvY.json  (+27 more)
outputs/youtube/2025-06-06/stats/: statistics.json  (+1 more)
src/youtube_transcript_processor/: README.md  __init__.py  chroma_storage.py  chunking_pipeline.py  inspect_chroma.py  llm_client.py  query_handler.py  requirements.txt  youtube_transcript_fetcher.py
(+127 files in other folders)
